--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,8 @@
-	$Id: ChangeLog,v 1.2 2000/01/13 20:14:58 ahn Exp $
+	$Id: ChangeLog,v 1.3 2000/03/04 01:12:01 ahn Exp $
+	
+2000-03-03	Dave Ahn <ahn@users.sourceforge.net>
+	
+	* BUGFIX: 36 player support for the Netrek Vanilla Server.
 	
 2000-01-13	Dave Ahn <ahn@users.sourceforge.net>
 	
