--- a/doc/paradise.1
+++ b/doc/paradise.1
@@ -1,7 +1,7 @@
 .\" -*- nroff -*-
 .\" Copyright (c) 1995
 .\" written by Bob Glamm
-.TH paradise 1 "2 February 1995" "Paradise Hackers" "Paradise hackers"
+.TH paradise 1 "15 March 2000" "Paradise Hackers" "Paradise Hackers"
 .de BP
 .sp
 .ti \-.2i
@@ -12,10 +12,7 @@
 paradise \(em\& Space Conquest game based loosely on Star Trek
 
 .SH SYNOPSIS
-paradise [-h host] [-p port] [-C name] [-P password] 
-         [-r defaults_file] [-t title] [-d display] 
-         [-F file] [-U port] [-R] [-o] [-m] [-e]
-         [-f] [-u] [-2] [-G playernum] [-s port]
+paradise [options]
 
 .SH DESCRIPTION
 .I paradise
@@ -27,11 +24,12 @@ other, and to just generally have a good time.
 .I paradise
 accepts the following options:
 
+.SH COMMON OPTIONS
 .TP
 .I \-h host
 Connects to a specific
 .I host
-server.  Default is to connect to the metaserver (see 
+server.  Default is to connect to the metaserver (see
 .I -m
 below).
 
@@ -48,76 +46,26 @@ and
 .I -p
 options are used together for league games.
 
+.SH DISPLAY OPTIONS
 .TP
-.I \-C name
-Use
-.I name
-as your alias when connecting to a paradise server.
+.I \-x
+Disable XPM mode.  Full color mode (using XPMs) is the normal mode for
+Paradise.  Disabling full color (XPM) mode will result in faster window
+redraws.
 
 .TP
-.I \-P password
-Use
-.I password
-as your password when connecting to a paradise server.
+.I \-k
+Turn on cookie mode (enabled by default along with XPM mode).
 
 .TP
-.I \-r defaults_file
-Use
-.I defaults_file
-as your paradise defaults file instead of ~/.xtrekrc or ~/.paradiserc.
+.I \-K
+Turn off cookie mode (valid only when XPM is enabled).
 
 .TP
-.I \-t title
-Use
-.I title
-as the title for your paradise window.
+.I \-O
+Turn on OR display mode (valid only when XPM is enabled).
 
-.TP
-.I \-d display
-Sets paradise window to display
-.I display
-instead of the display pointed to by the environment variable DISPLAY.
-
-.TP
-.I \-F file
-Replays a paradise game stored in
-.I file
-.  Use the recorder option within paradise to generate the file.
-
-.TP
-.I \-U port
-Specifies
-.I port
-as local UDP port number to use.
-
-.TP
-.I \-R
-Use normal RSA client authentication (default).  Required for some older
-Bronco servers.
-
-.TP
-.I \-o
-Use old (non-RSA) authorization.  Useful for when the client expires and we
-haven't distributed a new client yet.
-
-.TP
-.I \-m
-Connect to metaserver to display a list of active servers with the number of
-players on each.
-
-.TP
-.I \-e
-Checks the expire time on the client.  Clients expire because of RSA 
-requirements.
-
-.TP
-.I \-f
-Displays a short message on how to get a new client via ftp.
-
-.TP
-.I \-u
-Print usage information, including a list of options and a reference to the
-current WWW documentation page.
+.SH EMERGENCY RESTART OPTIONS
 
 .TP
 .I \-2
@@ -135,9 +83,90 @@ and
 .I -s
 are output when the paradise client is connected to the server.
 
+.SH OTHER OPTIONS
+.TP
+.I \-c
+Dump .xtrekrc/.paradiserc/.tedrc defaults.  The defaults that are
+dumped out can be used as a starting point for creating your
+own .xtrekrc/.paradiserc/.tedrc file.
+
+.TP
+.I \-d display
+Sets paradise window to display
+.I display
+instead of the display pointed to by the environment variable DISPLAY.
+
+.TP
+.I \-e
+Checks the expire time on the client.  Clients expire because of RSA 
+requirements.
+
+.TP
+.I \-f
+Displays a short message on how to get a new client via ftp.
+
+.TP
+.I \-m
+Connect to metaserver to display a list of active servers with the number of
+players on each.
+
+.TP
+.I \-o
+Use old (non-RSA) authorization.  WARNING: this option is
+.I obsolete
+, and probably does not even work anymore.
+
+.TP
+.I \-r defaults_file
+Use
+.I defaults_file
+as your paradise defaults file instead of ~/.xtrekrc, ~/.paradiserc, or
+~/.tedrc.
+
+.TP
+.I \-t title
+Use
+.I title
+as the title for your paradise window.
+
+.TP
+.I \-u
+Print usage information, including a list of options and a reference to the
+current WWW documentation page.
+
+.TP
+.I \-v
+Verbose image loading.  Images are printed out or displayed in the warning
+window as they are loaded.
+
+.TP
+.I \-C name
+Use
+.I name
+as your alias when connecting to a paradise server.
+
+.TP
+.I \-F file
+Replays a paradise game stored in
+.I file
+.  Use the recorder option within paradise to generate the file.
+
+.TP
+.I \-P password
+Use
+.I password
+as your password when connecting to a paradise server.
+
+.TP
+.I \-R
+Use normal RSA client authentication (default).  Required for some older
+Bronco servers.
+
 .SH FILES
 paradise                The executable
 .br
 ~/.xtrekrc,             Defaults file for paradise
 .br
 ~/.paradiserc
+.br
+~/.tedrc
