--- a/README
+++ b/README
@@ -1,55 +1,56 @@
-$Id: README,v 1.1 2000/01/06 21:26:44 ahn Exp $
+$Id: README,v 1.2 2000/04/07 05:06:06 watts Exp $
 
-README for TedTurner 1.3
+README for Paradise Netrek client 3.2
 
-This is the Paradise/TedTurner client.  It is a full color version of
-the older Paradise 2.x clients.  This client is required to play on
-Paradise servers, but it can also be used to play on other Netrek
-servers such as Bronco, Hockey, Chaos and INL.
+This is a stable release of the Paradise client.  This client was formerly
+known as the "TedTurner" client, and it is a full-color version of the
+older Paradise 2.x clients.  This client is required to play on Paradise
+servers, but it can also be used to play on other Netrek servers such as
+Bronco, Hockey, Chaos and INL.
 
-For more information on Paradise, visit http://paradise.netrek.org/.
-For more information on Netrek, visit http://www.netrek.org/.
+For more information on Paradise, visit http://paradise.netrek.org/
+For more information on Netrek, visit http://www.netrek.org/
 
-This client is distributed in two forms: binary and source.  To
-prevent clever players from modifying the source to cheat on the
-public servers, a Netrek client uses RSA public key cryptography to
-allow only special RSA-enabled ("blessed") clients to connect to and
-play on RSA-enabled servers.  Some servers are RSA-disabled, so either
-blessed or unblessed clients are allowed.
+This client is distributed in two forms: binary and source.  To prevent
+clever players from modifying the source to cheat on the public servers, a
+Netrek client uses RSA public key cryptography to allow only special
+RSA-enabled ("blessed") clients to connect to and play on RSA-enabled
+servers.  Some servers are RSA-disabled, so either blessed or unblessed
+clients are allowed.
 
-If you are interested in playing Paradise or Netrek, you need to
-download the binary for your platform.  You do not need to download
-the source code and compile it.
+If you are interested in playing Paradise or Netrek, you need to download
+the binary for your platform.  You do not need to download the source code
+and compile it.
 
-TedTurner RSA-enabled binaries and source code are available from
+Paradise client RSA-enabled binaries and source code are available from:
 
 	ftp://ftp.netrek.org/pub/netrek/clients/tedturner/
 	ftp://ftp.netrek.org/pub/netrek/paradise/
 
 The binaries are generally named in the following way:
 
-	TedTurner-"version"."vendor_name"-"OS_name"-"OS-version"
+	paradise-client-"version"."vendor_name"-"OS_name"-"OS-version"
 
-For example, TedTurner 1.2 for an SGI IRIX 6.2 workstation and
-TedTurner 1.3 for an Intel Win32 (Windows 3.11 + Win32, Win95, Win98,
-WinNT) would be:
+For example, paradise client 3.2 for an SGI IRIX 6.5 workstation and
+paradise client 3.2 for an Intel Linux system based on glibc2.1 would be:
 
-	TedTurner-1.2.sgi-IRIX-6.2
-	TedTurner-1.3.intel-Win32
+	paradise-client-3.2.sgi-IRIX-6.5
+	paradise-client-3.2.intel-Linux-glibc2.1
 
 If a binary for your platform does not exist and you are interested in
-helping with the port (i.e. you can port it yourself or can provide
-remote access to the machine), please contact the TedTurner client
-maintainer(s) and/or the paradise work group.
+helping with the port (i.e. you can port it yourself or can provide remote
+access to the machine), please contact the Paradise client maintainer(s)
+and/or the paradise work group.
 
-If you find bugs or problems, please report them back to the
-maintainer.  Suggestions and comments are also welcome.
+If you find bugs or problems, please report them back to the maintainer.  
+Suggestions and comments are also welcome.
 
 Maintainer:		Dave Ahn <ahn@netrek.org>
-Paradise Work Group:	paradise-workers@goof.com
+Paradise Work Group:	paradise-workers@lists.sourceforge.net
 
 Special thanks to the following people who have helped with client
 building, porting, debugging, etc.:
 
 Mike Roda <mroda@ipass.net>		Intel/Linux
 Nick Slager <slagerni@cse.msu.edu>
+Jeffrey Watts <watts@jayhawks.net>	Intel/Linux
