--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,6 @@
-	$Id: ChangeLog,v 1.15 2000/04/17 07:03:15 watts Exp $
+########################################################################
+        ------ Netrek II: Paradise - Client ChangeLog ------
+
 
 2000-04-17	Jeffrey Watts <watts@users.sourceforge.net>
 
@@ -16,8 +18,9 @@
 
 2000-04-06	Jeffrey Watts <watts@users.sourceforge.net>
 
-	* Added some colors other than the primary colors to the *.colored
-	pixmaps.  This makes the colored pixmaps look a lot nicer.
+	* Added some colors other than the primary colors to the 
+	*.colored pixmaps.  This makes the colored pixmaps look a lot 
+	nicer.
 
 2000-04-05	Bob Glamm <glamm@users.sourceforge.net>
 	
@@ -64,8 +67,8 @@
 	* Changed all instances of ted, tedturner, Ted, and Ted Turner,
 	to something involving Paradise.
 
-	* Made all XBM images compiled in by default as something for the
-	client to fall back on.  Also made rainbow dashboard XPM and
+	* Made all XBM images compiled in by default as something for
+	the client to fall back on.  Also made rainbow dashboard XPM and
 	MOTD header XPM compiled in by default (it was easier than
 	modifying the code to handle those two cases).
 
@@ -248,3 +251,7 @@
 	* UPDATE (configure): Use autoconf 2.13.
 
 	* BUGFIX: Flickering problem during window clear fixed.
+
+
+########################################################################
+	$Id: ChangeLog,v 1.16 2000/04/18 21:37:12 watts Exp $
