--- a/docs/TODO
+++ b/docs/TODO
@@ -1,4 +1,4 @@
-$Id: TODO,v 1.5 2000/03/24 23:53:32 glamm Exp $
+$Id: TODO,v 1.1 2007/08/27 21:30:19 watts Exp $
 
 Things to do for the TedTurner client:
 
